[gd_scene load_steps=2 format=3 uid="uid://dv1tgp7swrs5v"]

[ext_resource type="Script" uid="uid://dxd3wveny4x3n" path="res://bet_screen.gd" id="1_meeek"]

[node name="BetScreen" type="Node2D"]
script = ExtResource("1_meeek")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 855.0
color = Color(1, 1, 1, 0.372549)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.171
anchor_top = 0.166
anchor_right = 0.171
anchor_bottom = 0.166
offset_left = -5.08
offset_top = 0.0699921
offset_right = 313.92
offset_bottom = 33.07
text = "How many points are you going to make?"

[node name="Slider" type="HSlider" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.196
anchor_top = 0.335
anchor_right = 0.196
anchor_bottom = 0.335
offset_left = -5.07999
offset_top = 146.575
offset_right = 275.92
offset_bottom = 162.575
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="PointsBet" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.204
anchor_top = 0.263
anchor_right = 0.204
anchor_bottom = 0.263
offset_left = -5.92
offset_top = 152.135
offset_right = 218.08
offset_bottom = 192.135
text = "1000"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.427
anchor_right = 0.2
anchor_bottom = 0.427
offset_left = -4.0
offset_top = 108.915
offset_right = 291.0
offset_bottom = 139.915

[node name="Bet" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Bet!"

[node name="Main_menu" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.171
anchor_top = 0.166
anchor_right = 0.171
anchor_bottom = 0.166
offset_left = -6.08
offset_top = 43.07
offset_right = 312.92
offset_bottom = 170.07
text = "10X  = points * 2
100X = points * 5
1000X = points *100

if you lost the bet, you lost half points

"

[connection signal="value_changed" from="ColorRect/Slider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Bet" to="." method="_on_bet_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="visibility_changed" from="ColorRect/HBoxContainer/Main_menu" to="." method="_on_main_menu_visibility_changed"]
